should now support multiple locations

--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
       <div id="standardForm">
         <h3>Standard Information: </h3>
         <div class="form-group">
+          <label for="storeLocation">Store*</label>
+          <select class="form-control" name="storeLocation" id="storeLocation">
+            <option value="null" selected="selected" disabled="disabled">Please Choose*</option>
+            <option value="kalamazoo">Kalamazoo</option>
+            <option value="portage">Portage</option>
+            <option value="alpine">Grand Rapids Alpine</option>
+            <option value="22">Grand Rapids 22nd Street</option>
+          </select>
+        </div>
+        <div class="form-group">
           <label for="employeeName">Employee Name*</label>
           <input type="text" class="form-control" name="employeeName" id="employeeName" placeholder="YOUR First Name">
         </div>
