--- a/interm.html
+++ b/interm.html
@@ -37,6 +37,10 @@
     <div class="container">
       <div class="alert alert-danger"><p>Please proof read the following message before sending.</p></div>
       <div class="alert alert-success"><p><b>Sending Instructions: </b>Either copy and paste the message to email it or click the Send Email button to have the message automatically be sent to the customer's email address from the tech email.</p></div>
+      <a href="#" class="btn btn-default pull-left" id="cancelSend">Cancel</a>
+      <a href="#" class="btn btn-success pull-right" id="copyText">Copy</a>
+      <br>
+      <br>
       <br>
       <textarea rows="20" class="form-control" id="proof_read"></textarea>
       <br>
